--- a/app/src/main/res/layout/photo_grid_card_layout.xml
+++ b/app/src/main/res/layout/photo_grid_card_layout.xml
@@ -3,11 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="120dp"
     android:layout_gravity="center"
-    android:layout_margin="5dp"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="5dp">
+    android:layout_margin="15dp"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="5dp"
+    android:foreground="@drawable/background_border"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +19,7 @@
         <ImageView
             android:id="@+id/idIVcourseIVPhoto"
             android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_height="120dp"
             android:layout_gravity="center"
             android:contentDescription="@string/image"
             android:src="@mipmap/ic_launcher" />
