Changed xml colors

--- a/app/src/main/res/layout/activity_view_album.xml
+++ b/app/src/main/res/layout/activity_view_album.xml
@@ -36,6 +36,7 @@
         android:layout_height="wrap_content"
         android:text="@string/back"
         android:layout_marginTop="30dp"
+        android:backgroundTint="@color/dark_grey"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.087"
@@ -49,6 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="@string/select"
+        android:backgroundTint="@color/blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -62,6 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="@string/delete"
+        android:backgroundTint="@color/red"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
